changing the title of the homepage
UECS2363 Software Configuration and Construction  is supposed to be show here instead previous title

--- a/HomePage.html
+++ b/HomePage.html
@@ -4,7 +4,7 @@
   </head>
       
   <body>
-    <h1> Git hub Project </h1>
+    <h1> UECS2363 Software Configuration and Construction </h1>
     <p> This is My first Git hub Project</p>
     
     <a href="aboutus.html"> About Us </a> 
