--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,10 @@
   <head><title>About Us</title></head>
   
   <body>
+    <nav>
+      <a href="HomePage.html"> Home </a> 
+      <a href="aboutus.html"> About Us </a>
+    </nav>
     <h1> Student from Utar </h1>
     <p> From Software Engineering</p>
   </body>
