--- a/HomePage.html
+++ b/HomePage.html
@@ -12,7 +12,7 @@
     
     <h1> UECS2363 Software Configuration and Construction </h1>
     <p> This is My first Git hub Project</p>
-    <p> Please sponsor my project</p>
+    <p> Please sponsor my very first project</p>
   </body>
       
   <footer>
