--- a/HomePage.html
+++ b/HomePage.html
@@ -13,6 +13,7 @@
     <h1> UECS2363 Software Configuration and Construction </h1>
     <p> This is My first Git hub Project</p>
     <p> Please sponsor my very first project</p>
+    <p> trying smth new</p>
   </body>
       
   <footer>
